--- a/static/css/familytree/entire_view.css
+++ b/static/css/familytree/entire_view.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
+
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
         url('/static/images/backgrounds/familytree/background.webp');
-    font-family: 'Georgia', serif;
     color: #3e3e3e;
 }
 
@@ -34,6 +35,16 @@ h2::after {
     border-radius: 2px;
 }
 
+h3 {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #ededed;
+    text-align: center;
+    margin-bottom: 30px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
 .tree-level {
     display: flex;
     flex-direction: column;
@@ -57,6 +68,7 @@ h2::after {
 
 .person-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -65,19 +77,20 @@ h2::after {
 
 /* person cards */
 .person-box {
+    font-family: 'Merriweather', serif;
     background: #fffdf8;
     border: 1px solid #d9c4a6;
     padding: 15px 20px;
     border-radius: 15px;
-    height: fit-content;
-    width: 200px;
+    min-height: 200px;
+    width: 350px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.08);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
@@ -94,6 +107,13 @@ h2::after {
     text-decoration: none;
 }
 
+.person-name .birthday-display {
+    font-size: 0.9rem;
+    color: #777;
+    margin-bottom: 0.3rem;
+    text-align: center;
+}
+
 .current-focus {
     background-color: #f0c14bd8;
     padding: 1px;
@@ -107,26 +127,26 @@ h2::after {
 
 /* button section */
 .person-actions {
+    padding: 10px;
+    background-color: #f5f5c4aa;
+    border-radius: 10px;
     margin-top: 10px;
     display: flex;
-    flex-direction: column;
     gap: 6px;
 }
 
 .person-actions .btn {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     padding: 4px 6px;
     border-radius: 8px;
 }
 
 .person-box.pov {
-    background-color: #e1f0ff;
-    border-color: #8ab6d6;
+    border: #f2010183 solid 3px;
 
 }
 
 .person-box.partner {
-    background-color: #e7ffe7;
     border-color: #83c783;
 }
 
@@ -140,6 +160,10 @@ h2::after {
     border-color: #e0c36c;
 }
 
+.deactivated{   
+    opacity: 0.5;
+    pointer-events: none;
+}
 @media (max-width: 768px) {
     h2 {
         font-size: 2rem;
