Change birthday to birth_date

--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -14,8 +14,8 @@
     {%else%}
     <p>No Nickname</p>
     {% endif %}
-    {% if person.birthday%}
-      <p>Birthday: {{person.birthday}}</p>
+    {% if person.birth_date%}
+      <p>Birthday: {{person.birth_date}}</p>
     {% else %}
       <p>Birthday unknown</p>
     {% endif %}
