--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
 
     <div class="row text-center mt-4">
       <div class="col">
-        <p class="text-muted mt-2" style="font-size: 0.9rem;">No for a Email-adress. Just Sign up.</p>
+        <p class="text-muted mt-2" style="font-size: 0.9rem;">No Email-adress needed. Simple Sign up.</p>
       </div>
     </div>
   </div>
