--- a/static/css/base/home.css
+++ b/static/css/base/home.css
@@ -2,8 +2,26 @@
     --sub-color: #e8bc2c;
 }
 body {
-    background: linear-gradient(to bottom, rgba(39, 137, 4, 0.567), rgba(111, 66, 2, 0.6)), url('/static/images/backgrounds/home/corny-backgrorund.webp');
+    background: linear-gradient(to bottom, rgb(26 77 8 / 71%), rgb(77 47 5 / 87%)), url('/static/images/backgrounds/home/corny-backgrorund.webp');
 }
+
+h2 {
+    color: white;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+p{
+    color: white;
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
+
+.text-muted {
+    color: white !important;
+}
+
 .hero-section {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/static/images/backgrounds/home/leaves.webp');
     backdrop-filter: blur(8px);
@@ -76,7 +94,10 @@ body {
     color: white !important
 }
 
-
+.footer p{
+    color: black !important;
+    font-size: 1rem;
+}
 @media (max-width: 768px) {
     .hero-title {
         font-size: 2rem;
