--- a/staticfiles/css/base/home.css
+++ b/staticfiles/css/base/home.css
@@ -1,6 +1,26 @@
 :root {
     --sub-color: #e8bc2c;
 }
+body {
+    background: linear-gradient(to bottom, rgb(26 77 8 / 71%), rgb(77 47 5 / 87%)), url('/static/images/backgrounds/home/corny-backgrorund.webp');
+}
+
+h2 {
+    color: white;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+p{
+    color: white;
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
+
+.text-muted {
+    color: white !important;
+}
 
 .hero-section {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/static/images/backgrounds/home/leaves.webp');
@@ -74,7 +94,10 @@
     color: white !important
 }
 
-
+.footer p{
+    color: black !important;
+    font-size: 1rem;
+}
 @media (max-width: 768px) {
     .hero-title {
         font-size: 2rem;
