--- a/staticfiles/css/familytree/delete_person.css
+++ b/staticfiles/css/familytree/delete_person.css
@@ -1,6 +1,6 @@
 body {
-    background-image: linear-gradient(rgba(255, 245, 230, 0.9),
-            rgba(255, 245, 230, 0.9)), url('/static/images/backgrounds/delete/soft-leaves.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url('/static/images/backgrounds/familytree/soft-leaves.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -16,12 +16,14 @@ body {
     border-radius: 16px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
     text-align: center;
+    justify-self: center;
 }
 
 .delete-container h3 {
-    font-size: 1.8rem;
+    font-size: 2rem;
+    font-weight: bold;
     font-family: 'Playfair Display', serif;
-    color: #8b4b4b;
+    color: #aa6262;
     margin-bottom: 2rem;
 }
 
