--- a/staticfiles/css/familytree/family_view.css
+++ b/staticfiles/css/familytree/family_view.css
@@ -1,30 +1,37 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
-    background: linear-gradient(to bottom, #fdf7ec, #f3e5c1);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+        url('/static/images/backgrounds/familytree/fam-view-background.webp');
 }
 
-
-.choose-view-container {
-    align-self: start;
-    margin: 6px 0 0 6px;
+h1,h2 {
+    text-align: center;
+    margin: 20px 0;
+    font-family: 'Merriweather', serif;
+    color: #ededed;
 }
 
-#parents-list, #children-list{
+.add-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    width: 300px;
+}
+
+.bi-plus-circle{
+    color: #dfbb69
+}
+
+.hidden {
     display: none;
 }
-
-#parents-container, #children-container{
-    margin: 5px 0 0 0;
-}
-
-.hidden{
-    display: none;
-}
-
-
-
