--- a/staticfiles/css/familytree/view_details.css
+++ b/staticfiles/css/familytree/view_details.css
@@ -2,11 +2,27 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+
+body {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+        url('/static/images/backgrounds/familytree/view-detail.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    word-spacing: 3px;
+}
+
 .detail-container {
     display: flex;
     justify-content: center;
     padding: 3rem 1rem;
-    background-color: #fdf7ec;
+    
 }
 
 .detail-card {
