--- a/static/css/familytree/forms/add_self.css
+++ b/static/css/familytree/forms/add_self.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url('/static/images/backgrounds/familytree/seed.webp');
+        url('/static/images/backgrounds/familytree/seed.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -49,4 +49,24 @@ textarea {
     border-radius: 8px;
     border: 1px solid #c9b79e;
     padding: 0.5rem;
+}
+
+.select2-container {
+    max-width: 100% !important;
+    width: 100% !important;
+    box-sizing: border-box;
+}
+
+.select2-selection {
+    height: auto;
+    min-height: 38px;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.375rem;
+    border: 1px solid #ced4da;
+    background-color: #fff;
+}
+
+.select2-container .select2-selection--multiple {
+    overflow-x: hidden;
+    word-wrap: break-word;
 }
