--- a/familytree/templates/familytree/entire_view.html
+++ b/familytree/templates/familytree/entire_view.html
@@ -30,9 +30,9 @@
                 {% endif %}
               </div>
               <div class="person-actions mt-2">
-                <a href="{% url 'view_details' pov.id gp.id %}" class="btn btn-outline-success">View Details</a>
-                <a href="{% url 'classic_tree_view' gp.id %}" class="btn btn-outline-success">View Familytree</a>
-                <a href="{% url 'family_view' gp.id %}" class="btn btn-outline-success">Focused View</a>
+                <a href="{% url 'view_details' pov.id gp.id %}" class="btn ">View Details</a>
+                <a href="{% url 'classic_tree_view' gp.id %}" class="btn ">View Familytree</a>
+                <a href="{% url 'family_view' gp.id %}" class="btn ">Focused View</a>
               </div>
             </div>
           {% endfor %}
@@ -58,9 +58,9 @@
                 {% endif %}
               </div>
               <div class="person-actions mt-2">
-                <a href="{% url 'view_details' pov.id pp.id %}" class="btn btn-outline-success">View Details</a>
-                <a href="{% url 'classic_tree_view' pp.id %}" class="btn btn-outline-success">View Familytree</a>
-                <a href="{% url 'family_view' pp.id %}" class="btn btn-outline-success">Focused View</a>
+                <a href="{% url 'view_details' pov.id pp.id %}" class="btn ">View Details</a>
+                <a href="{% url 'classic_tree_view' pp.id %}" class="btn ">View Familytree</a>
+                <a href="{% url 'family_view' pp.id %}" class="btn ">Focused View</a>
               </div>
             </div>
           {% endfor %}
@@ -75,9 +75,9 @@
                 {% endif %}
               </div>
               <div class="person-actions mt-2">
-                <a href="{% url 'view_details' pov.id p.id %}" class="btn btn-outline-success">View Details</a>
-                <a href="{% url 'classic_tree_view' p.id %}" class="btn btn-outline-success">View Familytree</a>
-                <a href="{% url 'family_view' p.id %}" class="btn btn-outline-success">Focused View</a>
+                <a href="{% url 'view_details' pov.id p.id %}" class="btn ">View Details</a>
+                <a href="{% url 'classic_tree_view' p.id %}" class="btn ">View Familytree</a>
+                <a href="{% url 'family_view' p.id %}" class="btn ">Focused View</a>
               </div>
             </div>
           {% endfor %}
@@ -109,9 +109,9 @@
             </p>
           </div>
           <div class="person-actions mt-2">
-            <a href="{% url 'view_details' pov.id pov.id %}" class="btn btn-outline-success">View Details</a>
+            <a href="{% url 'view_details' pov.id pov.id %}" class="btn ">View Details</a>
             <a href="{% url 'classic_tree_view' pov.id %}" class="btn btn-outline-secondary deactivated">View Familytree</a>
-            <a href="{% url 'family_view' pov.id %}" class="btn btn-outline-success">Focused View</a>
+            <a href="{% url 'family_view' pov.id %}" class="btn ">Focused View</a>
           </div>
         </div>
 
@@ -126,9 +126,9 @@
                 {% endif %}
             </div>
             <div class="person-actions mt-2">
-              <a href="{% url 'view_details' pov.id partner.id %}" class="btn btn-outline-success">View Details</a>
-              <a href="{% url 'classic_tree_view' partner.id %}" class="btn btn-outline-success">View Familytree</a>
-              <a href="{% url 'family_view' partner.id %}" class="btn btn-outline-success">Focused View</a>
+              <a href="{% url 'view_details' pov.id partner.id %}" class="btn ">View Details</a>
+              <a href="{% url 'classic_tree_view' partner.id %}" class="btn ">View Familytree</a>
+              <a href="{% url 'family_view' partner.id %}" class="btn ">Focused View</a>
             </div>
           </div>
         {% endfor %}
@@ -153,9 +153,9 @@
                 {% endif %}
               </div>
               <div class="person-actions mt-2">
-                <a href="{% url 'view_details' pov.id c.id %}" class="btn btn-outline-success">View Details</a>
-                <a href="{% url 'classic_tree_view' c.id %}" class="btn btn-outline-success">View Familytree</a>
-                <a href="{% url 'family_view' c.id %}" class="btn btn-outline-success">Focused View</a>
+                <a href="{% url 'view_details' pov.id c.id %}" class="btn ">View Details</a>
+                <a href="{% url 'classic_tree_view' c.id %}" class="btn ">View Familytree</a>
+                <a href="{% url 'family_view' c.id %}" class="btn ">Focused View</a>
               </div>
             </div>
           {% endfor %}
