--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 :root {
-    --primary-color: #ae8c1a;
+    --primary-color: #e1b522;
 }
 
 body {
