--- a/static/css/familytree/entire_view.css
+++ b/static/css/familytree/entire_view.css
@@ -18,7 +18,7 @@ h2 {
     font-family: 'Playfair Display', serif;
     font-size: 2.5rem;
     font-weight: bold;
-    color: #dfbb69;
+    color: #efc971;
     text-align: center;
     margin-bottom: 50px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
@@ -78,8 +78,8 @@ h3 {
 /* person cards */
 .person-box {
     font-family: 'Merriweather', serif;
-    background: #e1d299;
-    border: 1px solid #d9c4a6;
+    background: linear-gradient(to bottom, rgb(26 77 8 / 71%), rgb(77 47 5 / 87%)), url('/static/images/backgrounds/home/corny-backgrorund.webp');
+    border: 1px solid #d9c4a683;
     padding: 15px 20px;
     border-radius: 15px;
     min-height: 200px;
@@ -103,15 +103,16 @@ h3 {
 .person-name p {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #2c2c2c;
+    color: #ffffff;
     text-decoration: none;
 }
 
 .person-name .birthday-display {
     font-size: 1.1rem;
-    color: #777;
+    color: #eeecec;
     margin-bottom: 0.3rem;
     text-align: center;
+    letter-spacing: 1.3px;
 }
 
 .current-focus {
@@ -135,10 +136,18 @@ h3 {
 }
 
 .person-actions .btn {
+    letter-spacing: 1px;
+    color: white;
+    background-color: #4b3b2a;
     font-size: 1rem;
-    font-weight: bold;
+    font-weight: 600;
     padding: 4px 6px;
     border-radius: 8px;
+}
+
+.person-actions .btn:hover {
+    color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(45, 137, 11, 0.514); 
 }
 
 .person-box.pov {
