--- a/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
+++ b/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
@@ -24,10 +24,10 @@
     
     <div class="container text-center" id="main-container">
       <div class="row justify-content-center align-items-start">
-        <div class="col-md-4">
+        <div class="col-12 col-lg-4 mr-3">
           <img src="{{ person_of_history.image.url }}" alt="{{ person_of_history.name }}" class="img-fluid mb-3" id="person_of_history_portrait" style="max-width: 300px;" />
         </div>
-        <div class="col-md-7" id="text-container">
+        <div class="col-12 col-lg-7" id="text-container">
           <h3>{{ person_of_history.name }}</h3>
           <h5 class="text-muted">{{ person_of_history.nickname }}</h5>
           <p class="mt-3">{{ person_of_history.story }}</p>
