--- a/staticfiles/css/base/contact.css
+++ b/staticfiles/css/base/contact.css
@@ -4,6 +4,10 @@
     --contact-accent: #ae8c1a;
 }
 
+body {
+    background: linear-gradient(to bottom, rgb(26 77 8 / 71%), rgb(77 47 5 / 87%)), url('/static/images/backgrounds/home/corny-backgrorund.webp');
+}
+
 .page-section {
     background: var(--contact-bg);
     border-radius: 1rem;
