--- a/staticfiles/css/familytree/_person_card.css
+++ b/staticfiles/css/familytree/_person_card.css
@@ -12,7 +12,7 @@
 .person-card {
   position: relative;
   align-self: center;
-  background-color: #dfbb69;
+  background: linear-gradient(to bottom, rgb(26 77 8 / 71%), rgb(77 47 5 / 87%)), url('/static/images/backgrounds/home/corny-backgrorund.webp');
   border-radius: 16px;
   border: 0.5px solid #00000033;
   padding: 10px;
@@ -31,7 +31,7 @@
   top: 10px;
   width: 36px;
   height: 36px;
-  background-color: #ececec80;
+  background-color: #fffdfdc3;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -60,13 +60,14 @@
 
 .person-info h5 {
   font-family: --main-font;
+  color: white;
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
 }
 
 .person-info p {
   font-size: 0.9rem;
-  color: #777;
+  color: white;
   margin-bottom: 0.3rem;
   text-align: left;
 }
@@ -81,12 +82,13 @@
 }
 
 .person-button {
-  background-color: #a97c37;
-  color: white;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  font-weight: 600;
   border: none;
   border-radius: 8px;
-  padding: 0.5rem;
-  font-size: 0.85rem;
+  padding: 0.5rem 0.7rem;
+  font-size: 1rem;
 
   cursor: pointer;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
