--- a/staticfiles/css/account/logout.css
+++ b/staticfiles/css/account/logout.css
@@ -1,6 +1,5 @@
 body {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.92),
-            rgba(255, 255, 255, 0.92));
+    background: linear-gradient(to bottom, rgb(26 77 8 / 71%), rgb(77 47 5 / 87%)), url('/static/images/backgrounds/home/corny-backgrorund.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -13,8 +12,12 @@ h3 {
     font-size: 2rem;
     font-family: 'Playfair Display', serif;
     font-weight: bold;
-    color: #ae8c1a;
+    color: #f1c01d;
     margin-top: 2rem;
+}
+
+p {
+    color: white;
 }
 
 .errorlist {
