--- a/staticfiles/css/account/signup.css
+++ b/staticfiles/css/account/signup.css
@@ -1,6 +1,5 @@
 body {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.92),
-            rgba(255, 255, 255, 0.92));
+    background: linear-gradient(to bottom, rgb(26 77 8 / 71%), rgb(77 47 5 / 87%)), url('/static/images/backgrounds/home/corny-backgrorund.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -12,9 +11,14 @@ h1 {
     text-align: center;
     font-size: 2.2rem;
     font-family: 'Playfair Display', serif;
-    color: #ae8c1a;
+    color: #f1c01d;
     margin-top: 2rem;
     margin-bottom: 1.5rem;
+}
+
+p, a {
+    color: #ffffff;
+    font-size: 1.1rem;
 }
 
 .errorlist {
