--- a/familytree/templates/familytree/edit_person.html
+++ b/familytree/templates/familytree/edit_person.html
@@ -9,6 +9,7 @@
 {% block form_media %}
   {{ form.media }}
 {% endblock %}
+{% load crispy_forms_tags %}
 {% block content %}
   <div class="container mt-5">
     <div class="text-center">
@@ -19,10 +20,11 @@
         <img class="profile-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
       {% endif %}
     </div>
-    
+
     <form id="person-Form" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
+      {{ relation_form.relation_type|as_crispy_field }}
       <button type="submit" class="btn btn-primary">Save</button>
       <a href="{% url 'delete_person' pov_id person.id %}" class="btn btn-danger" aria-label="Delete">Delete</a>
       <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary" aria-label="Cancel">Cancel</a>
