--- a/static/css/familytree/edit_person.css
+++ b/static/css/familytree/edit_person.css
@@ -3,8 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 body {
-    background-image: linear-gradient(rgba(205, 251, 142, 0.544),
-            rgba(147, 250, 96, 0.601)), url('/static/images/backgrounds/people_of_history/papyrus_background.webp');
+    background-image: linear-gradient(to bottom, rgba(26, 77, 8, 0.514), rgba(77, 47, 5, 0.466)), url('/static/images/backgrounds/people_of_history/papyrus_background.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
