Add top margin to h1

--- a/familytree/templates/familytree/entire_view.html
+++ b/familytree/templates/familytree/entire_view.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container text-center">
+  <div class="container text-center mt-3">
     <h2 class="mb-5">{{ pov.first_name }}'s Family Tree</h2>
 
     <!-- Grandparents -->
