--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}
-  <title>Fehler 500</title>
+  <title>Error 500</title>
 {% endblock %}
 
 {% block content %}
