Fix missing p element

--- a/familytree/templates/familytree/entire_view.html
+++ b/familytree/templates/familytree/entire_view.html
@@ -111,7 +111,7 @@
       <div class="person-container">
         <div class="person-box pov">
           <div class="person-name">
-            {{ pov.first_name }} {{ pov.last_name }}
+            <p>{{ pov.first_name }} {{ pov.last_name }}</p>
             {% if pov.birth_date %}
               <p class="birthday-display">
                 {{ pov.birth_date }}{% if pov.death_date %}
