Force HTTPS response for better Lighthouse rating

--- a/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
+++ b/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
@@ -25,7 +25,9 @@
     <div class="container text-center" id="main-container">
       <div class="row justify-content-center align-items-start">
         <div class="col-12 col-lg-4 mr-3">
-          <img src="{{ person_of_history.image.url }}" alt="{{ person_of_history.name }}" class="img-fluid mb-3" id="person_of_history_portrait" style="max-width: 300px;" />
+          {% with secure_url=person_of_history.image.url|replace:"http://":"https://" %}
+            <img src="{{ person_of_history.image.url }}" alt="{{ person_of_history.name }}" class="img-fluid mb-3" id="person_of_history_portrait" style="max-width: 300px;" />
+          {% endwith %}
         </div>
         <div class="col-12 col-lg-7" id="text-container">
           <h3>{{ person_of_history.name }}</h3>
