Open privacy policy and legal notice in a new tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,8 +118,8 @@
           © {{ year }} Yggdrasil – The Tree of Family. All rights reserved. Created by<a href="https://github.com/fairytaib" target="_blank" rel="noopener noreferrer" aria-label="Link to Github">Sophjan Moubarrid</a>
         </p>
         <nav class="footer-nav">
-          <a href="{% url 'legal_notice' %}" aria-label="Legal notice">Legal Notice</a> |
-          <a href="{% url 'privacy_policy' %}" aria-label="Privacy Policy">Privacy Policy</a>
+          <a href="{% url 'legal_notice' %}" target="_blank" rel="noopener noreferrer" aria-label="Legal notice">Legal Notice</a> |
+          <a href="{% url 'privacy_policy' %}" target="_blank" rel="noopener noreferrer" aria-label="Privacy Policy">Privacy Policy</a> |
         </nav>
       </div>
     </footer>
