--- a/familytree/templates/familytree/entire_view.html
+++ b/familytree/templates/familytree/entire_view.html
@@ -124,7 +124,7 @@
           </div>
           <div class="person-actions mt-2">
             <a href="{% url 'view_details' pov.id pov.id %}" class="btn">View Details</a>
-            <a href="{% url 'classic_tree_view' pov.id %}" class="btn btn-outline-secondary deactivated">View Familytree</a>
+            <a href="{% url 'classic_tree_view' pov.id %}" class="btn btn-outline-secondary deactivated">You view your Familytree</a>
             <a href="{% url 'family_view' pov.id %}" class="btn">Focused View</a>
           </div>
         </div>
