Insert additional button

--- a/familytree/templates/familytree/view_details.html
+++ b/familytree/templates/familytree/view_details.html
@@ -100,7 +100,8 @@
           {% endif %}
         </div>
         <div class="d-flex justify-content-end mt-1">
-          <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary" aria-label="Go Back">Go Back</a>
+          <a href="{% url 'classic_tree_view' pov_id %}" class="btn btn-secondary" aria-label="Go Back">Family view</a>
+          <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary" aria-label="Go Back">Focus</a>
         </div>
         
       </div>
