Add meta-tag "keywords"

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block meta %}
       <!-- Default Meta Tags -->
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="author" content="Sophjan Moubarrid">
+      <meta name="keywords" content="Yggdrasil, family tree, genealogy, privacy, support, reach out, family history, family network" />
       <meta name="description" content="Create your family tree with Yggdrasil - private, secure and visual." />
       <meta property="og:title" content="Yggdrasil - The Tree of Family" />
       <meta property="og:description" content="Explore your family roots with a modern, data-secure family tree app." />
